ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/LoanApplicationProduct__c.object-meta.xml
<CustomObject>
    <label>Loan Application Product</label>
    <nameField>
        <label>Loan Application Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>