ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/act__c.field-meta.xml
<CustomField>
    <fullName>act__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACT</label>
    <type>Checkbox</type>
</CustomField>