ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/actualcomparisonrate__c.field-meta.xml
<CustomField>
    <fullName>actualcomparisonrate__c</fullName>
    <label>Actual Comparison Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>