ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/AdditionalValuationFee__c.field-meta.xml
<CustomField>
    <fullName>AdditionalValuationFee__c</fullName>
    <label>Additional Valuation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>