ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/AFGCommission__c.field-meta.xml
<CustomField>
    <fullName>AFGCommission__c</fullName>
    <formula>UpfrontCommission__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFG Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>