ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/AFGTrailCommission__c.field-meta.xml
<CustomField>
    <fullName>AFGTrailCommission__c</fullName>
    <formula>Year1TrailCommission__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFG Trail Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>