ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/applicationfees__c.field-meta.xml
<CustomField>
    <fullName>applicationfees__c</fullName>
    <label>Application Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>