ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <formula>Lender__r.Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>