ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/AssessmentRate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentRate__c</fullName>
    <label>Assessment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>