ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/AssessmentRepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>AssessmentRepaymentAmount__c</fullName>
    <label>Assessment Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>