ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/autoappvdccard__c.field-meta.xml
<CustomField>
    <fullName>autoappvdccard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Appvdc Card</label>
    <type>Checkbox</type>
</CustomField>