ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/BpayAccess__c.field-meta.xml
<CustomField>
    <fullName>BpayAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bpay Access</label>
    <type>Checkbox</type>
</CustomField>