ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/BusinessErrors__c.field-meta.xml
<CustomField>
    <fullName>BusinessErrors__c</fullName>
    <label>Business Errors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PolicyCodes</valueSetName>
    </valueSet>
</CustomField>