ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/comparisonrate__c.field-meta.xml
<CustomField>
    <fullName>comparisonrate__c</fullName>
    <label>Comparison Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>