ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/ConditionalApproval__c.field-meta.xml
<CustomField>
    <fullName>ConditionalApproval__c</fullName>
    <formula>Lender__r.ConditionalApproval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditional Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>