ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/CTMCommission__c.field-meta.xml
<CustomField>
    <fullName>CTMCommission__c</fullName>
    <formula>UpfrontCommission__c * 0.98</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTM Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>