ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/CTMTrailCommission__c.field-meta.xml
<CustomField>
    <fullName>CTMTrailCommission__c</fullName>
    <formula>Year1TrailCommission__c * 0.98</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTM Trail Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>