ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/debitcardavailable__c.field-meta.xml
<CustomField>
    <fullName>debitcardavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debit Card Available</label>
    <type>Checkbox</type>
</CustomField>