ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DirectCreditAccess__c.field-meta.xml
<CustomField>
    <fullName>DirectCreditAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Credit Access</label>
    <type>Checkbox</type>
</CustomField>