ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DirectDebitAccess__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Debit Access</label>
    <type>Checkbox</type>
</CustomField>