ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/dischargefees__c.field-meta.xml
<CustomField>
    <fullName>dischargefees__c</fullName>
    <label>Discharge Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>