ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/dscr__c.field-meta.xml
<CustomField>
    <fullName>dscr__c</fullName>
    <label>DSCR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>