ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DSCRRuleActive__c.field-meta.xml
<CustomField>
    <fullName>DSCRRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSCR Rule Active</label>
    <type>Checkbox</type>
</CustomField>