ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DSCRThreshold__c.field-meta.xml
<CustomField>
    <fullName>DSCRThreshold__c</fullName>
    <label>DSCR Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>