ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DTA__c.field-meta.xml
<CustomField>
    <fullName>DTA__c</fullName>
    <label>DTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>