ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DTARuleActive__c.field-meta.xml
<CustomField>
    <fullName>DTARuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DTA Rule Active</label>
    <type>Checkbox</type>
</CustomField>