ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DTAThreshold__c.field-meta.xml
<CustomField>
    <fullName>DTAThreshold__c</fullName>
    <label>DTA Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>