ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <description>The debt-to-income (DTI) ratio compares the amount of total debt to overall annual gross income (unshaded)</description>
    <inlineHelpText>The debt-to-income (DTI) ratio compares the amount of total debt to overall annual gross income (unshaded)</inlineHelpText>
    <label>DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>