ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DTIRuleActive__c.field-meta.xml
<CustomField>
    <fullName>DTIRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DTI Rule Active</label>
    <type>Checkbox</type>
</CustomField>