ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/DTIThreshold__c.field-meta.xml
<CustomField>
    <fullName>DTIThreshold__c</fullName>
    <label>DTI Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>