ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/EFTPOSAccess__c.field-meta.xml
<CustomField>
    <fullName>EFTPOSAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFTPOS Access</label>
    <type>Checkbox</type>
</CustomField>