ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/expenses__c.field-meta.xml
<CustomField>
    <fullName>expenses__c</fullName>
    <label>Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>