ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/expensestype__c.field-meta.xml
<CustomField>
    <fullName>expensestype__c</fullName>
    <label>Expenses Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>