ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/FirstHomeBuyer__c.field-meta.xml
<CustomField>
    <fullName>FirstHomeBuyer__c</fullName>
    <formula>Lender__r.FirstHomeBuyer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Home Buyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>