ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/fixedperiod__c.field-meta.xml
<CustomField>
    <fullName>fixedperiod__c</fullName>
    <label>Fixed Period</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>