ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/fixedrate__c.field-meta.xml
<CustomField>
    <fullName>fixedrate__c</fullName>
    <label>Fixed Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>