ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/FixedTermCal__c.field-meta.xml
<CustomField>
    <fullName>FixedTermCal__c</fullName>
    <formula>Case(
fixedperiod__c,
12, &quot;1 Year&quot;,
24, &quot;2 Years&quot;,
36, &quot;3 Years&quot;,
48, &quot;4 Years&quot;,
60, &quot;5 Years&quot;,
&quot;N/A&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Term Cal</label>
    <type>Text</type>
</CustomField>