ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/gearingratio__c.field-meta.xml
<CustomField>
    <fullName>gearingratio__c</fullName>
    <description>Gearing ratio compares your total liabilities (including the new loan) to your total assets (including proposed new loan), expressed as a percentage - unshaded</description>
    <inlineHelpText>Gearing ratio compares your total liabilities (including the new loan) to your total assets (including proposed new loan), expressed as a percentage - unshaded</inlineHelpText>
    <label>Gearing Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>