ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/GiroPostAustPostAccess__c.field-meta.xml
<CustomField>
    <fullName>GiroPostAustPostAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Giro Post / Aust Post Access</label>
    <type>Checkbox</type>
</CustomField>