ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/hemratio__c.field-meta.xml
<CustomField>
    <fullName>hemratio__c</fullName>
    <label>HEM Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>