ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/HUR__c.field-meta.xml
<CustomField>
    <fullName>HUR__c</fullName>
    <label>HUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>