ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/HURRuleActive__c.field-meta.xml
<CustomField>
    <fullName>HURRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HUR Rule Active</label>
    <type>Checkbox</type>
</CustomField>