ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/HURThreshold__c.field-meta.xml
<CustomField>
    <fullName>HURThreshold__c</fullName>
    <label>HUR Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>