ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/IDH__c.field-meta.xml
<CustomField>
    <fullName>IDH__c</fullName>
    <description>Total Income available for debt and housing (IDH) compares the net income after living expenses and UMI buffer available to total fixed commitments (including proposed loan repayment(s)) - based on assessment rules</description>
    <inlineHelpText>Total Income available for debt and housing (IDH) compares the net income after living expenses and UMI buffer available to total fixed commitments (including proposed loan repayment(s)) - based on assessment rules</inlineHelpText>
    <label>IDH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>