ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/IDHRuleActive__c.field-meta.xml
<CustomField>
    <fullName>IDHRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDH Rule Active</label>
    <type>Checkbox</type>
</CustomField>