ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/IDHThreshold__c.field-meta.xml
<CustomField>
    <fullName>IDHThreshold__c</fullName>
    <label>IDH Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>