ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/internetbanking__c.field-meta.xml
<CustomField>
    <fullName>internetbanking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Banking</label>
    <type>Checkbox</type>
</CustomField>