ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/investment__c.field-meta.xml
<CustomField>
    <fullName>investment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment</label>
    <type>Checkbox</type>
</CustomField>