ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Application Products</relationshipLabel>
    <relationshipName>Loan_Application_Products</relationshipName>
    <type>Lookup</type>
</CustomField>