ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LenderLogo__c.field-meta.xml
<CustomField>
    <fullName>LenderLogo__c</fullName>
    <formula>Lender__r.LenderLogo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Logo</label>
    <type>Text</type>
</CustomField>