ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/lenderslegalfees__c.field-meta.xml
<CustomField>
    <fullName>lenderslegalfees__c</fullName>
    <label>Lenders Legal Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>