ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/lenderssettlementfees__c.field-meta.xml
<CustomField>
    <fullName>lenderssettlementfees__c</fullName>
    <label>Lenders Settlement Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>