ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LMIAmount__c.field-meta.xml
<CustomField>
    <fullName>LMIAmount__c</fullName>
    <label>LMI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>