ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LMIFeeCapitalisation__c.field-meta.xml
<CustomField>
    <fullName>LMIFeeCapitalisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMI Fee Capitalisation</label>
    <type>Checkbox</type>
</CustomField>