ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LoanAmountIncLMI__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountIncLMI__c</fullName>
    <formula>LoanAmount__c +  LMIAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount Inc LMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>