ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LTI__c.field-meta.xml
<CustomField>
    <fullName>LTI__c</fullName>
    <description>The loan-to-income (LTI) ratio compares the new loan exposure to overall annual gross income (unshaded)</description>
    <inlineHelpText>The loan-to-income (LTI) ratio compares the new loan exposure to overall annual gross income (unshaded)</inlineHelpText>
    <label>LTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>