ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LTIRuleActive__c.field-meta.xml
<CustomField>
    <fullName>LTIRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LTI Rule Active</label>
    <type>Checkbox</type>
</CustomField>