ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/LVR__c.field-meta.xml
<CustomField>
    <fullName>LVR__c</fullName>
    <label>LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>