ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/maxcapacity__c.field-meta.xml
<CustomField>
    <fullName>maxcapacity__c</fullName>
    <label>Max Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>