ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/maxCapacityRuleActive__c.field-meta.xml
<CustomField>
    <fullName>maxCapacityRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Capacity Rule Active</label>
    <type>Checkbox</type>
</CustomField>