ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MaximumLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>MaximumLoanAmount__c</fullName>
    <label>Maximum Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>