ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MaximumLVRInvestment__c.field-meta.xml
<CustomField>
    <fullName>MaximumLVRInvestment__c</fullName>
    <label>Maximum LVR Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>