ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MaximumLVRInvestmentincLMI__c.field-meta.xml
<CustomField>
    <fullName>MaximumLVRInvestmentincLMI__c</fullName>
    <label>Maximum LVR Investment inc. LMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>