ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MaximumLVROwnerOccupied__c.field-meta.xml
<CustomField>
    <fullName>MaximumLVROwnerOccupied__c</fullName>
    <label>Maximum LVR Owner Occupied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>