ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MaximumLVROwnerOccupiedincLMI__c.field-meta.xml
<CustomField>
    <fullName>MaximumLVROwnerOccupiedincLMI__c</fullName>
    <label>Maximum LVR Owner Occupied inc. LMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>