ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MaxLoanTerm__c.field-meta.xml
<CustomField>
    <fullName>MaxLoanTerm__c</fullName>
    <label>Max Loan Term</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>