ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/maxlvr__c.field-meta.xml
<CustomField>
    <fullName>maxlvr__c</fullName>
    <label>Max LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>