ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MinimumLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>MinimumLoanAmount__c</fullName>
    <label>Minimum Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>