ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/MinimumLoanTerm__c.field-meta.xml
<CustomField>
    <fullName>MinimumLoanTerm__c</fullName>
    <label>Minimum Loan Term</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>