ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/mortgageoffsetavailable__c.field-meta.xml
<CustomField>
    <fullName>mortgageoffsetavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Offset Available</label>
    <type>Checkbox</type>
</CustomField>