ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/NDI__c.field-meta.xml
<CustomField>
    <fullName>NDI__c</fullName>
    <description>Net Disposable Income Ratio (NDI) compares the net disposable income available (UMI) to total fixed commitments (including proposed loan repayment(s)) - based on assessment rules</description>
    <inlineHelpText>Net Disposable Income Ratio (NDI) compares the net disposable income available (UMI) to total fixed commitments (including proposed loan repayment(s)) - based on assessment rules</inlineHelpText>
    <label>NDI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>