ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/NDIRuleActive__c.field-meta.xml
<CustomField>
    <fullName>NDIRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDI Rule Active</label>
    <type>Checkbox</type>
</CustomField>