ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/NDIThreshold__c.field-meta.xml
<CustomField>
    <fullName>NDIThreshold__c</fullName>
    <label>NDI Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>