ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/NetMonthlySurplus__c.field-meta.xml
<CustomField>
    <fullName>NetMonthlySurplus__c</fullName>
    <label>Net Monthly Surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>