ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/NewPurchase__c.field-meta.xml
<CustomField>
    <fullName>NewPurchase__c</fullName>
    <formula>Lender__r.NewPurchase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>