ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/nsw__c.field-meta.xml
<CustomField>
    <fullName>nsw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NSW</label>
    <type>Checkbox</type>
</CustomField>