ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/NT__c.field-meta.xml
<CustomField>
    <fullName>NT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NT</label>
    <type>Checkbox</type>
</CustomField>