ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/ongoingfees__c.field-meta.xml
<CustomField>
    <fullName>ongoingfees__c</fullName>
    <label>Ongoing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>