ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/ongoingfeesperiod__c.field-meta.xml
<CustomField>
    <fullName>ongoingfeesperiod__c</fullName>
    <label>Ongoing Fees Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>