ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/OtherLenderFees__c.field-meta.xml
<CustomField>
    <fullName>OtherLenderFees__c</fullName>
    <formula>AdditionalValuationFee__c + lenderslegalfees__c + lenderssettlementfees__c + RateLockFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Lender Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>