ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/owneroccupied__c.field-meta.xml
<CustomField>
    <fullName>owneroccupied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Occupied</label>
    <type>Checkbox</type>
</CustomField>