ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/PhoneBanking__c.field-meta.xml
<CustomField>
    <fullName>PhoneBanking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Banking</label>
    <type>Checkbox</type>
</CustomField>