ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/PolicyCodes__c.field-meta.xml
<CustomField>
    <fullName>PolicyCodes__c</fullName>
    <label>Policy Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PolicyCodes</valueSetName>
    </valueSet>
</CustomField>