ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/PolicyStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicyStatus__c</fullName>
    <description>Formula field for lwc product eligibility table</description>
    <formula>IF(AND( NOT(ISBLANK(rowhash__c)) ,ISBLANK(PolicyCodes__c),ISBLANK(BusinessErrors__c)), &quot;Eligible&quot;,
IF(AND(NOT(ISBLANK(rowhash__c)),OR(NOT(ISBLANK(PolicyCodes__c)),NOT(ISBLANK(BusinessErrors__c)))), &quot;Ineligible&quot;, &quot;Withheld&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Status</label>
    <type>Text</type>
</CustomField>