ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/productdetails__c.field-meta.xml
<CustomField>
    <fullName>productdetails__c</fullName>
    <label>Product Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>