ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/productid__c.field-meta.xml
<CustomField>
    <fullName>productid__c</fullName>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>