ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Full name of the product</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>