ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/ProductRate__c.field-meta.xml
<CustomField>
    <fullName>ProductRate__c</fullName>
    <label>Product Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>