ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/qld__c.field-meta.xml
<CustomField>
    <fullName>qld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QLD</label>
    <type>Checkbox</type>
</CustomField>