ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/ratelockavailable__c.field-meta.xml
<CustomField>
    <fullName>ratelockavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Lock Available</label>
    <type>Checkbox</type>
</CustomField>