ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/RateLockFee__c.field-meta.xml
<CustomField>
    <fullName>RateLockFee__c</fullName>
    <label>Rate Lock Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>