ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/RecommendationOrder__c.field-meta.xml
<CustomField>
    <fullName>RecommendationOrder__c</fullName>
    <label>Recommendation Order</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>