ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/redrawfacility__c.field-meta.xml
<CustomField>
    <fullName>redrawfacility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redraw Facility</label>
    <type>Checkbox</type>
</CustomField>