ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/Refinance__c.field-meta.xml
<CustomField>
    <fullName>Refinance__c</fullName>
    <formula>Lender__r.Refinance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refinance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>