ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/repayment__c.field-meta.xml
<CustomField>
    <fullName>repayment__c</fullName>
    <label>Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>