ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/RepaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>RepaymentFrequency__c</fullName>
    <label>Repayment Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>