ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/repaymentoption__c.field-meta.xml
<CustomField>
    <fullName>repaymentoption__c</fullName>
    <label>Repayment Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>