ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/repaymentscanmakeextra__c.field-meta.xml
<CustomField>
    <fullName>repaymentscanmakeextra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repayments Can Make Extra</label>
    <type>Checkbox</type>
</CustomField>