ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/rowhash__c.field-meta.xml
<CustomField>
    <fullName>rowhash__c</fullName>
    <label>Row Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>