ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA</label>
    <type>Checkbox</type>
</CustomField>