ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/SecurityValue__c.field-meta.xml
<CustomField>
    <fullName>SecurityValue__c</fullName>
    <label>Security Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>