ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/SelectedProduct__c.field-meta.xml
<CustomField>
    <fullName>SelectedProduct__c</fullName>
    <description>Product Selected for the Application</description>
    <formula>IF(
AND(
NOT(ISBLANK(ResidentialLoanApplication__r.ProductHash__c)),
rowhash__c =  ResidentialLoanApplication__r.ProductHash__c
)
, TRUE
,FALSE)</formula>
    <inlineHelpText>Product Selected for the Application</inlineHelpText>
    <label>Selected Product</label>
    <type>Checkbox</type>
</CustomField>