ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/splitavailable__c.field-meta.xml
<CustomField>
    <fullName>splitavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Available</label>
    <type>Checkbox</type>
</CustomField>