ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/tas__c.field-meta.xml
<CustomField>
    <fullName>tas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TAS</label>
    <type>Checkbox</type>
</CustomField>