ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/TermYrs__c.field-meta.xml
<CustomField>
    <fullName>TermYrs__c</fullName>
    <label>Term (Yrs)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>